added parameter-loggin to LocatorFactoryImplEx

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <module>jackrabbit-parent</module>
     <module>jackrabbit-api</module>
     <module>jackrabbit-jcr-commons</module>
-    <module>jackrabbit-jcr-tests</module>
+    <!-- <module>jackrabbit-jcr-tests</module> -->
     <module>jackrabbit-core</module>
     <module>jackrabbit-webdav</module>
     <module>jackrabbit-jcr-server</module>
